# specter_server

./: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: config.cmake  macros.cmake  specter-config-dependencies.cmake.in  specter-config.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
modules/: CMakeLists.txt
modules/include/specter/: config.h  config.h.in  export.h  module.h
modules/include/specter/input/: keyboard.h  mouse.h  utils.h
modules/include/specter/mark/: marker.h  widget_marker.h  widget_tooltip.h
modules/include/specter/observe/: action.h  observer.h
modules/include/specter/observe/preview/: observer.h
modules/include/specter/observe/property/: action.h  observer.h
modules/include/specter/observe/tree/: action.h  observer.h
modules/include/specter/record/: action.h  recorder.h  strategy.h
modules/include/specter/search/: id.h  query.h  searcher.h  strategy.h  utils.h
modules/include/specter/server/: call.h  server.h  service.h
modules/include/specter/service/: keyboard.h  marker.h  mouse.h  object.h  previewer.h  recorder.h  utils.h
modules/include/specter/thread/: invoke.h  utils.h
modules/resource/specter/: specter.qrc
modules/src/specter/: CMakeLists.txt  inject.cpp  module.cpp
modules/src/specter/input/: keyboard.cpp  mouse.cpp  utils.cpp
modules/src/specter/mark/: marker.cpp  widget_marker.cpp  widget_tooltip.cpp
modules/src/specter/observe/: action.cpp  observer.cpp
modules/src/specter/observe/preview/: observer.cpp
modules/src/specter/observe/property/: action.cpp  observer.cpp
modules/src/specter/observe/tree/: action.cpp  observer.cpp
modules/src/specter/record/: action.cpp  recorder.cpp  strategy.cpp
modules/src/specter/search/: id.cpp  query.cpp  searcher.cpp  strategy.cpp  utils.cpp
modules/src/specter/server/: call.cpp  server.cpp
modules/src/specter/service/: keyboard.cpp  marker.cpp  mouse.cpp  object.cpp  previewer.cpp  recorder.cpp  utils.cpp
modules/src/specter/thread/: utils.cpp
proto/specter/: specter.proto
