# ----------------------------------------------------------------------- #
# -------------------- Set CMake version and project -------------------- #
# ----------------------------------------------------------------------- #
cmake_minimum_required(VERSION 3.20)
project(
  SPECTER
  VERSION 0.0.1
  LANGUAGES CXX)
# ----------------------------------------------------------------------- #
# ------------------------ Include config and macros -------------------- #
# ----------------------------------------------------------------------- #
include(${SPECTER_SOURCE_DIR}/cmake/config.cmake)
include(${SPECTER_SOURCE_DIR}/cmake/macros.cmake)
# ----------------------------------------------------------------------- #
# ---------------------------- Add subdirectories ----------------------- #
# ----------------------------------------------------------------------- #
add_subdirectory(deps)
add_subdirectory(modules)

add_subdirectory(docs)
# ----------------------------------------------------------------------- #
# ------------------------------- Final steps --------------------------- #
# ----------------------------------------------------------------------- #
specter_export_modules()
specter_static_analyzers()
# ----------------------------------------------------------------------- #
